--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 }
 
 .blog-header-logo {
-  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+  font-family: 'Playfair Display', Georgia, 'Times New Roman', serif;
   font-size: 2.25rem;
 }
 
@@ -12,8 +12,13 @@
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Playfair Display', Georgia, 'Times New Roman', serif;
 }
 
 .display-4 {
@@ -46,9 +51,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-scroller .nav-link {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-  font-size: .875rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  font-size: 0.875rem;
 }
 
 .card-img-right {
@@ -61,9 +66,13 @@ h1, h2, h3, h4, h5, h6 {
   flex: 0 0 auto;
 }
 
-.h-250 { height: 250px; }
+.h-250 {
+  height: 250px;
+}
 @media (min-width: 768px) {
-  .h-md-250 { height: 250px; }
+  .h-md-250 {
+    height: 250px;
+  }
 }
 
 /*
@@ -100,7 +109,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 4rem;
 }
 .blog-post-title {
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
   font-size: 2.5rem;
 }
 .blog-post-meta {
@@ -116,7 +125,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #999;
   text-align: center;
   background-color: #f9f9f9;
-  border-top: .05rem solid #e5e5e5;
+  border-top: 0.05rem solid #e5e5e5;
 }
 .blog-footer p:last-child {
   margin-bottom: 0;
@@ -124,7 +133,30 @@ h1, h2, h3, h4, h5, h6 {
 
 /* end of blog */
 
+.now-playing-poster {
+  width: 200px;
+  position: relative;
+}
 
+.poster-title {
+  position: absolute;
+  bottom: 0;
+  padding: 4px;
+  background: rgba(39, 40, 39, 0.77);
+  color: white;
+  width: 100%;
+}
 
+.search-inputbox {
+  width: 200px !important;
+}
 
+@media only screen and (min-width: 525px) {
+  .search-inputbox {
+    width:500px !important;
+  }
+}
 
+.cursor-pointer {
+  cursor: pointer;
+}
