added watchlist star

--- a/src/App.css
+++ b/src/App.css
@@ -160,3 +160,28 @@ h6 {
 .cursor-pointer {
   cursor: pointer;
 }
+
+.video-responsive{
+  overflow:hidden;
+  padding-bottom:56.25%;
+  position:relative;
+  height:0;
+}
+.video-responsive iframe{
+  left:0;
+  top:0;
+  height:100%;
+  width:100%;
+  position:absolute;
+}
+
+.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+
+
+.detail-poster {
+  width: 270px !important; 
+}
+
+.detail-rating{ 
+  font-size: 1.6rem;
+}
