--- a/src/App.css
+++ b/src/App.css
@@ -147,13 +147,9 @@ h6 {
   width: 100%;
 }
 
-.search-inputbox {
-  width: 200px !important;
-}
-
 @media only screen and (min-width: 525px) {
   .search-inputbox {
-    width:500px !important;
+    width: 500px !important;
   }
 }
 
@@ -161,27 +157,72 @@ h6 {
   cursor: pointer;
 }
 
-.video-responsive{
-  overflow:hidden;
-  padding-bottom:56.25%;
-  position:relative;
-  height:0;
+.video-responsive {
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  position: relative;
+  height: 0;
 }
-.video-responsive iframe{
-  left:0;
-  top:0;
-  height:100%;
-  width:100%;
-  position:absolute;
+.video-responsive iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
 }
 
-.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
-
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 .detail-poster {
-  width: 270px !important; 
+  width: 270px !important;
 }
 
-.detail-rating{ 
+.detail-rating {
   font-size: 1.6rem;
+}
+
+.poster-title {
+  /* display: none; */
+}
+
+.blog-header-logo-mobile {
+  display: none;
+}
+
+@media only screen and (max-width: 945px) {
+  
+  .blog-header-logo {
+    display: none;
+  }
+  .blog-header-logo-mobile {
+    display: block;
+  }
+  .search-inputbox {
+    width: 300px !important;
+  }
+  .poster-title {
+    display: none;
+  }
+}
+@media only screen and (max-width: 700px) {
+  
+  .slick-arrow {
+    display: none !important;
+  }
+  
 }
