--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,8 @@
 }
 
 .blog-header-logo {
-  font-family: '', 'Helvetica', Georgia, 'Times New Roman', serif;
-  font-size: 2.25rem;
+  font-family: 'Antic Slab', 'Helvetica', Georgia, 'Times New Roman', serif;
+  font-size: 2.5rem;
 }
 
 .blog-header-logo:hover {
@@ -18,7 +18,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Anton', sans-serif;
+  font-family: 'Antic Slab', sans-serif;
 }
 
 .display-4 {
@@ -196,6 +196,9 @@ h6 {
   font-size: 1.6rem;
 }
 
+.trailer {
+  align-self: flex-end;
+}
 
 .blog-header-logo-mobile {
   display: none;
