--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,16 @@ h6 {
   font-size: 0.875rem;
 }
 
+.user-profile {
+  width: 65px;
+  height: 65px;
+}
+
+.user-profile img {
+  border-radius: 50%;
+  max-width: 100%;
+}
+
 .card-img-right {
   height: 100%;
   border-radius: 0 3px 3px 0;
@@ -205,7 +215,7 @@ h6 {
 }
 
 @media only screen and (max-width: 945px) {
-  
+
   .blog-header-logo {
     display: none;
   }
@@ -220,7 +230,7 @@ h6 {
   }
 }
 @media only screen and (max-width: 775px) {
-  
+
   .slick-arrow {
     display: none !important;
   }
